--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "pixgram",
+  "name": "pixzone",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.2",
     "@testing-library/jest-dom": "^5.16.4",
@@ -45,5 +45,10 @@
     "autoprefixer": "^10.4.4",
     "postcss": "^8.4.12",
     "tailwindcss": "^3.0.23"
-  }
+  },
+  "description": "a social media application",
+  "main": "index.js",
+  "repository": "https://github.com/gauravsinhaweb/pixzone.git",
+  "author": "gauravsinhaweb <sinhagaurav.me@gmail.com>",
+  "license": "MIT"
 }
